# kiche

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  desktop-natives.yml  libquiche-desktop-natives.yml  release-libquiche.yml  release.yml
docs/rfcs/: draft-webtrans-http3-09.txt
example/: README.md  build.gradle.kts
example/androidApp/: build.gradle.kts
example/androidApp/src/main/: AndroidManifest.xml
example/iosApp/: .gitignore  README.md  project.yml
example/iosApp/iosApp/: ContentView.swift  Info.plist
example/shared/: build.gradle.kts
example/shared/src/commonMain/kotlin/eu/buney/kiche/example/: AdaptiveEngine.kt  App.kt  Components.kt  Endpoints.kt  Http3DemoViewModel.kt
example/shared/src/commonMain/kotlin/eu/buney/kiche/example/screens/: ConnectionInfoScreen.kt  DownloadScreen.kt  EchoScreen.kt  StreamingScreen.kt
example/shared/src/desktopMain/kotlin/eu/buney/kiche/example/: AdaptiveEngine.desktop.kt
example/shared/src/iosMain/kotlin/eu/buney/kiche/example/: AdaptiveEngine.ios.kt  MainViewController.kt
example/src/androidMain/kotlin/eu/buney/kiche/example/: MainActivity.kt
example/src/commonMain/kotlin/eu/buney/kiche/example/screens/: DownloadScreen.kt
example/src/desktopMain/kotlin/eu/buney/kiche/example/: main.kt
gradle/: libs.versions.toml
kiche/: build.gradle.kts  consumer-rules.pro
kiche/cinterop/: kiche_net.h  quiche.def
kiche/jni/: CMakeLists.txt  helpers.c  kiche_jni.c  kiche_jni.h  quiche_config_jni.c  quiche_conn_jni.c  quiche_h3_jni.c
kiche/src/androidAndJvmMain/kotlin/eu/buney/kiche/: Kiche.kt  KicheConfig.kt  KicheConnection.kt  KicheH3Config.kt  KicheH3Connection.kt  KicheLoader.kt
kiche/src/commonMain/kotlin/eu/buney/kiche/: Kiche.kt  KicheConfig.kt  KicheConnection.kt  KicheError.kt  KicheException.kt  KicheH3Config.kt  KicheH3Connection.kt  KicheH3Exception.kt  KicheH3Types.kt  KicheTypes.kt  QuicVarint.kt
kiche/src/commonTest/kotlin/eu/buney/kiche/: KicheConfigTest.kt  KicheConnectionTest.kt  KicheH3Test.kt  KicheTest.kt  QuicVarintTest.kt  TestPipe.kt  TestSession.kt
kiche/src/iosMain/kotlin/eu/buney/kiche/: ByteSwap.kt  Kiche.kt  KicheConfig.kt  KicheConnection.kt  KicheH3Config.kt  KicheH3Connection.kt
kiche/src/iosTest/kotlin/eu/buney/kiche/: TestPipeIos.kt
kiche/src/jvmTest/kotlin/eu/buney/kiche/: TestPipeJvm.kt
ktor-client-h3-adaptive/: README.md  build.gradle.kts
ktor-client-h3-adaptive/src/commonMain/kotlin/eu/buney/kiche/ktor/h3adaptive/: AltSvc.kt  H3Adaptive.kt  H3AdaptiveEngine.kt  H3AdaptiveEngineConfig.kt  OriginState.kt
ktor-client-h3-adaptive/src/commonTest/kotlin/eu/buney/kiche/ktor/h3adaptive/: AltSvcTest.kt  OriginStateTest.kt
ktor-client-kiche/: README.md  build.gradle.kts
ktor-client-kiche/src/androidAndJvmTest/kotlin/eu/buney/kiche/ktor/: TestCertDir.androidAndJvm.kt
ktor-client-kiche/src/androidMain/kotlin/eu/buney/kiche/ktor/: Resolve.android.kt
ktor-client-kiche/src/commonMain/kotlin/eu/buney/kiche/ktor/: KicheEndpoint.kt  KicheEngine.kt  KicheEngineConfig.kt  PlatformLog.kt  Resolve.kt
ktor-client-kiche/src/commonMain/kotlin/eu/buney/kiche/ktor/webtransport/: KicheWebTransportDatagrams.kt  KicheWebTransportSession.kt  KicheWebTransportStreamImpl.kt  WebTransport.kt  WebTransportBuilders.kt  WebTransportSession.kt
ktor-client-kiche/src/commonTest/kotlin/eu/buney/kiche/ktor/: KicheConnectionPoolTest.kt  KicheHttpClientTest.kt  KicheStreamingBodyTest.kt  KicheTestServer.kt  KicheWebTransportTest.kt  TestCertDir.kt
ktor-client-kiche/src/iosMain/kotlin/eu/buney/kiche/ktor/: PlatformLog.ios.kt  Resolve.ios.kt
ktor-client-kiche/src/iosTest/kotlin/eu/buney/kiche/ktor/: TestCertDir.ios.kt
ktor-client-kiche/src/jvmMain/kotlin/eu/buney/kiche/ktor/: Kiche.kt  KicheEngine.kt  PlatformLog.jvm.kt  Resolve.jvm.kt
ktor-client-kiche/src/jvmTest/kotlin/eu/buney/kiche/ktor/: KicheHttpClientTest.kt  QuicheTestServer.kt
ktor-kiche-webtransport/: build.gradle.kts
ktor-kiche-webtransport/src/commonMain/kotlin/eu/buney/kiche/ktor/webtransport/: WebTransportCapability.kt  WebTransportCloseInfo.kt  WebTransportDatagrams.kt  WebTransportException.kt  WebTransportStream.kt
ktor-kiche-webtransport/src/commonMain/kotlin/eu/buney/kiche/ktor/webtransport/capsule/: Capsule.kt  CloseWebTransportSession.kt  HttpDatagram.kt  QuicVarint.kt
ktor-kiche-webtransport/src/commonTest/kotlin/eu/buney/kiche/ktor/webtransport/capsule/: CapsuleTest.kt  CloseWebTransportSessionTest.kt  HttpDatagramTest.kt  QuicVarintTest.kt
ktor-server-kiche/: README.md  build.gradle.kts
ktor-server-kiche/src/androidMain/kotlin/eu/buney/kiche/ktor/server/: PlatformLog.android.kt
ktor-server-kiche/src/commonMain/kotlin/eu/buney/kiche/ktor/server/: KicheApplicationCall.kt  KicheApplicationEngine.kt  PlatformLog.kt
ktor-server-kiche/src/commonMain/kotlin/eu/buney/kiche/ktor/server/webtransport/: KicheWebTransportServerSession.kt  WebTransportRouting.kt  WebTransportServerSession.kt
ktor-server-kiche/src/commonTest/kotlin/eu/buney/kiche/ktor/server/: KicheMultiConnectionTest.kt  KicheServerTest.kt  RetryTokenTest.kt  TestCertDir.kt
ktor-server-kiche/src/iosMain/kotlin/eu/buney/kiche/ktor/server/: PlatformLog.ios.kt
ktor-server-kiche/src/iosTest/kotlin/eu/buney/kiche/ktor/server/: TestCertDir.ios.kt
ktor-server-kiche/src/jvmMain/kotlin/eu/buney/kiche/ktor/server/: KicheApplicationCall.kt  KicheApplicationEngine.kt  KicheQuic.kt
ktor-server-kiche/src/jvmTest/kotlin/eu/buney/kiche/ktor/server/: KicheServerTest.kt  TestCertDir.jvm.kt
libquiche/: build.gradle.kts
libquiche-headers/: build.gradle.kts
libquiche/cinterop/: libquiche.def
libquiche/src/commonMain/kotlin/eu/buney/libquiche/: Libquiche.kt
scripts/: build_libquiche_linux.sh  build_libquiche_windows.ps1  build_quiche_android.sh  build_quiche_apple.sh  build_quiche_jni.sh  build_quiche_jni_linux.sh  build_quiche_jni_windows.ps1
